@@ -3,6 +3,7 @@ package in.koreatech.koin.domain.dining.service;
 import java.time.Clock;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -26,14 +27,17 @@ public class DiningService {
 
     private final Clock clock;
 
-    public List<DiningResponse> getDinings(LocalDate date) {
+    public List<DiningResponse> getDinings(LocalDate date, Integer userId) {
         if (date == null) {
             date = LocalDate.now(clock);
         }
         return diningRepository.findAllByDate(date)
             .stream()
-            .map(DiningResponse::from)
-            .toList();
+            .map(dining -> {
+                boolean isLiked =
+                    (userId != null) && diningLikesRepository.existsByDiningIdAndUserId(dining.getId(), userId);
+                return DiningResponse.from(dining, isLiked);
+            }).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = false)
